--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,10 @@ build/
 .cache
 compile_commands.json
 
+# ignore all files except cc and c suffix
 src/*
 !src/*.cc
 !src/*.c
+leetcode/*
+!leetcode/*.cc
+!leetcode/*.c
