--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,23 +4,20 @@
     "version": "2.0.0",
     "tasks": [
         {
-            "type": "cppbuild",
-            "label": "C/C++: gcc build active file",
-            "command": "/usr/bin/gcc",
+            "type": "shell",
+            "label": "build",
+            "command": "/usr/bin/g++",
             "args": [
                 "-fdiagnostics-color=always",
                 "-g",
                 "${file}",
                 "-o",
-                "target/${fileBasenameNoExtension}",
+                "${fileBasenameNoExtension}",
                 "-pthread"
             ],
             "options": {
                 "cwd": "${fileDirname}"
             },
-            "problemMatcher": [
-                "$gcc"
-            ],
             "group": "build",
             "detail": "compiler: /usr/bin/gcc"
         }
