--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -1,10 +1,1 @@
-[package]
-name = "rust"
-version = "0.1.0"
-edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
-
-[dependencies]
-async-trait = "0.1.80"
-tokio = { version = "1.38.0", features = ["full"] }
+workspace = { members = ["core"], resolver = "2" }
