--- a/rust/core/Cargo.toml
+++ b/rust/core/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 
 [dependencies]
 async-trait = "0.1.80"
+future-utils = "0.12.1"
 reqwest = { version = "0.12.5", features = ["json"] }
 rustls = { path = "../rustls/rustls", package = "rustls"}
 rustls-pemfile = "2.1.2"
