--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -10,6 +10,8 @@ edition = "2021"
 async-trait = "0.1.80"
 future-utils = "0.12.1"
 futures = "0.3.30"
+libc = "0.2.155"
 reqwest = { version = "0.12.5", features = ["json"] }
 rustls-pemfile = "2.1.2"
+socket2 = "0.5.7"
 tokio = { version = "1.38.0", features = ["full"] }
