--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -13,5 +13,7 @@ futures = "0.3.30"
 libc = "0.2.155"
 reqwest = { version = "0.12.5", features = ["json"] }
 rustls-pemfile = "2.1.2"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_yaml = "0.9.34"
 socket2 = "0.5.7"
 tokio = { version = "1.38.0", features = ["full"] }
