--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -11,6 +11,9 @@ anyhow = "1.0.86"
 async-trait = "0.1.80"
 future-utils = "0.12.1"
 futures = "0.3.30"
+kaydle = "0.2.0"
+kdl = "4.6.0"
+knuffel = "3.2.0"
 libc = "0.2.155"
 nix = { version = "0.29.0", features = ["socket", "uio", "fs"] }
 openssl = "0.10.64"
