--- a/rust/Cargo.toml
+++ b/rust/Cargo.toml
@@ -25,3 +25,4 @@ serde_json = { version = "1.0.124", features = ["raw_value"] }
 serde_yaml = "0.9.34"
 socket2 = "0.5.7"
 tokio = { version = "1.38.0", features = ["full"] }
+url = "2.5.2"
